--- a/mercedes_tools/templates/base.html
+++ b/mercedes_tools/templates/base.html
@@ -33,13 +33,16 @@
 
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-            <a class="navbar-brand" href="#">Mercedes Tools</a>
+            <a class="navbar-brand" href="{% url 'core:home' %}">Mercedes Tools</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'vin_charts:model_year_list' %}">VIN Chart</a>
+                    </li>
                     {% block nav %}
                     {% endblock nav %}
                 </ul>
@@ -53,7 +56,7 @@
 
         <footer class="footer mt-auto py-3 fixed-bottom text-center">
             <div class="container">
-                <span class="text-muted"><a href="#">Mercedes Tools</a> for parts advisors and technicians, by <a href="https://www.trevorwatson.info/" target="_blank">Trevor Watson</a>.</span>
+                <span class="text-muted"><a href="{% url 'core:home' %}">Mercedes Tools</a> for parts advisors and technicians, by <a href="https://www.trevorwatson.info/" target="_blank">Trevor Watson</a>.</span>
             </div>
         </footer>
 
