--- a/mercedes_tools/templates/base.html
+++ b/mercedes_tools/templates/base.html
@@ -49,7 +49,7 @@
             </div>
         </nav>
 
-        <main role="main" class="container">
+        <main role="main" class="container pb-5">
             {% block content %}
             {% endblock content %}
         </main><!-- /.container -->
