remove Vehicle.transmission field and add Vehicle.transmissions field

--- a/vin_charts/templates/vin_charts/vehicle_detail.html
+++ b/vin_charts/templates/vin_charts/vehicle_detail.html
@@ -24,7 +24,11 @@
                 <dt>Engine</dt>
                 <dd>{{ object.engine }}</dd>
                 <dt>Transmission</dt>
-                <dd>{{ object.transmission }}</dd>
+                <dd>
+                    {% for transmission in object.transmissions.all %}
+                        {{ transmission }}<br>
+                    {% endfor %}
+                </dd>
             </dl>
         </div>
     </div>
