--- a/vin_charts/templates/vin_charts/modelyear_list.html
+++ b/vin_charts/templates/vin_charts/modelyear_list.html
@@ -10,7 +10,7 @@
         <div class="row">
             {% for model_year in object_list %}
                 <div class="col-sm-2 p-2 text-center">
-                    <a href="{% url 'vin_charts:vehicle_list' model_year.year %}">{{ model_year.year }}</a>
+                    <a class="btn btn-secondary" href="{% url 'vin_charts:vehicle_list' model_year.year %}">{{ model_year.year }}</a>
                 </div>
             {% endfor %}
         </div>
