--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
 
-{% block nav %}
-{% endblock nav %}
+{% block title %}
+    Tools
+{% endblock title %}
 
 {% block content %}
     <div class="centered">
         <h1>Mercedes Tools</h1>
         <p><a href="{% url 'core:home' %}">Mercedes Tools</a> for parts advisors and technicians, by <a href="https://www.trevorwatson.info/" target="_blank">Trevor Watson</a>.</p>
-        <div class="col-md-3">
-            <div class="card" style="width: 18rem;">
+        <div class="col-md-12">
+            <div class="card mx-auto" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">VIN Charts</h5>
                     <p class="card-text">VIN Charts from Mercedes presented in a more accessible format.</p>
