add Detail views for Chassis, Engine & Transmission models
commit ab63e6150423a2c1ab5efebd405f814ca806da61
Author: Trevor <wtrevor162@gmail.com>
Date:   Tue Feb 5 16:51:28 2019 -0500

    build out TransmissionDetail template

commit 3bc971829e311a68062dbe73086d3626a2d72b67
Author: Trevor <wtrevor162@gmail.com>
Date:   Tue Feb 5 16:51:02 2019 -0500

    build out EngineDetail template

commit 345aa97a0017e04e230d3852ae63259f5c422b20
Author: Trevor <wtrevor162@gmail.com>
Date:   Tue Feb 5 16:45:09 2019 -0500

    build out ChassisDetail template

commit 8863e9d495207237ccc7be400f396dcada03fff4
Author: Trevor <wtrevor162@gmail.com>
Date:   Tue Feb 5 14:00:14 2019 -0500

    add links to VehicleDetail

commit 253d256fd7e53c1a947cb641b63d41cf3360723f
Author: Trevor <wtrevor162@gmail.com>
Date:   Tue Feb 5 13:55:58 2019 -0500

    add ChassisDetail, EngineDetail, & TransmissionDetail views

--- a/vin_charts/templates/vin_charts/vehicle_detail.html
+++ b/vin_charts/templates/vin_charts/vehicle_detail.html
@@ -23,18 +23,18 @@
             <dl>
                 <dt>Chassis</dt>
                 <dd>
-                    {{ object.chassis }}
+                    <a href="{{ object.chassis.get_absolute_url }}">{{ object.chassis }}</a>
                     {% include "vin_charts/_notes_modal.html" with id="Chassis" title="Chassis Notes" obj=object.chassis %}
                 </dd>
                 <dt>Engine</dt>
                 <dd>
-                    {{ object.engine }}
+                    <a href="{{ object.engine.get_absolute_url }}">{{ object.engine }}</a>
                     {% include "vin_charts/_notes_modal.html" with id="Engine" title="Engine Notes" obj=object.engine %}
                 </dd>
                 <dt>Transmission</dt>
                 <dd>
                     {% for transmission in object.transmissions.all %}
-                        {{ transmission }}{% include "vin_charts/_notes_modal.html" with id="Transmission" title="Transmission Notes" obj=transmission %}<br>
+                        <a href="{{ transmission.get_absolute_url }}">{{ transmission }}</a>{% include "vin_charts/_notes_modal.html" with id="Transmission" title="Transmission Notes" obj=transmission %}<br>
                     {% endfor %}
                 </dd>
             </dl>
